package com.alibaba.hbase.replication.protocol.protobuf;

option java_package = "com.alibaba.hbase.replication.protocol.protobuf";
option java_outer_classname = "BodyBinObject";

message bodyBinObject {
required string clusterId = 1;
repeated tableBinObject tableBinObjectList=2;
}

message tableBinObject {
required string tableName = 1;
repeated editBinObject editBinObjectList=2;
}

message editBinObject {
  required int32 type = 1;
  optional bytes rowKey = 2;
  optional bytes family = 3;
  optional bytes qualifier= 4 ;
  optional bytes value= 5 ;
}